--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: projects.registry.vmware.com/vmware-cloud-director/cluster-api-provider-cloud-director:v1.3.2
+        image: projects.packages.broadcom.com/vmware-cloud-director/cluster-api-provider-cloud-director:v1.3.2
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
