--- a/templates/crs/cpi/cloud-director-ccm.yaml
+++ b/templates/crs/cpi/cloud-director-ccm.yaml
@@ -154,7 +154,7 @@ spec:
         fsGroup: 2000
       containers:
         - name: vmware-cloud-director-ccm
-          image: projects.registry.vmware.com/vmware-cloud-director/cloud-provider-for-cloud-director:1.6.0
+          image: projects.packages.broadcom.com/vmware-cloud-director/cloud-provider-for-cloud-director:1.6.0
           imagePullPolicy: IfNotPresent
           command:
             - /opt/vcloud/bin/cloud-provider-for-cloud-director
