--- a/templates/cluster-template-v1.26.14-tkgv2.5.2-crs.yaml
+++ b/templates/cluster-template-v1.26.14-tkgv2.5.2-crs.yaml
@@ -89,11 +89,11 @@ spec:
           - 127.0.0.1
       dns:
         imageRepository: projects.packages.broadcom.com/tkg # image repository to pull the DNS image from
-        imageTag: v1.9.3+vmware.22 # DNS image tag associated with the TKGm OVA used. This dns version is associated with TKG OVA using Kubernetes version v1.28.4.
+        imageTag: v1.9.3_vmware.22 # DNS image tag associated with the TKGm OVA used. This dns version is associated with TKG OVA using Kubernetes version v1.28.4.
       etcd:
         local:
           imageRepository: projects.packages.broadcom.com/tkg # image repository to pull the etcd image from
-          imageTag: v3.5.12+vmware.5 # etcd image tag associated with the TKGm OVA used. This etcd version is associated with TKG OVA using Kubernetes version v1.28.4.
+          imageTag: v3.5.12_vmware.5 # etcd image tag associated with the TKGm OVA used. This etcd version is associated with TKG OVA using Kubernetes version v1.28.4.
       imageRepository: projects.packages.broadcom.com/tkg # image repository to use for the rest of kubernetes images
     users:
       - name: root
